# EffectiveMobileTestTask

./: Dockerfile  README.md  auth_utils.py  db.py  docker-compose.yml  main.py  models.py  pyproject.toml  redis_client.py
alembic/: env.py
alembic/versions/: 27ae34c4b70b_init_tables.py
routers/: __init__.py  access_rules_router.py  auth_router.py  products_router.py  profiles_router.py  roles_router.py
schemas/: access_rules_schemas.py  business_object.py  role_schemas.py  user_schemas.py
static/: fill_db_data.py
